--- a/fpoles.html
+++ b/fpoles.html
@@ -105,6 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
       </div>
 
       <!-- Spacer -->
@@ -340,7 +341,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
           <div class="row">
             <div class="col-lg-5">
-               <h2 class="section-title">Projetos</h2>
+               <h2 class="section-title">Outros Projetos</h2>
             </div>        
           </div>
         </div>
@@ -427,6 +428,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
                         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
                         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+                        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
                         </div>
                       </div>
                     </div>
@@ -453,6 +455,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
           </div>
         </div>
         <div class="flex-item">
