--- a/fpoles.html
+++ b/fpoles.html
@@ -66,13 +66,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </nav>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
+        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
         </div>
-        <div class="copy">© Skan Hous 2024. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
+        <div class="copy">© Skan Hous 2025. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
       </div>
     </div>
 
@@ -225,7 +224,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 1.0<br> Modulos em Aço<br> Alessandra Pretti
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous<br> Woodframe<br> by FPoles
               </div>
 
               <!-- Layer 6 -->
