--- a/fpoles.html
+++ b/fpoles.html
@@ -315,8 +315,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-md-6">
               <strong class="section-subtitle">FPOLES</strong>
               <h2 class="section-title section-about-title">Projeto FPoles Skan Hous</h2>
-              <p>Com um conceito único de modularidade o renomado escritório FPoles criou esta casa de alto padrão utilizando madeira engenheirada.</p>
-
+              <p>A Skan Hous tem orgulho de contar com a parceria do renomado escritório FPoles Arquitetos, referência em projetos inovadores e de alto padrão. Reconhecido por sua abordagem visionária, o FPoles desenvolveu um projeto modular exclusivo para a Skan Hous, utilizando madeira engenheirada (MLC), um material sustentável e tecnologicamente avançado.</p>
+               <p>Essa colaboração representa a união de excelência arquitetônica e tecnologia offsite, mostrando que é possível aliar design de ponta, eficiência construtiva e sustentabilidade. Para o FPoles, a parceria com a Skan Hous é uma oportunidade de levar a arquitetura modular para um novo patamar, materializando projetos com agilidade, precisão e impacto positivo no meio ambiente.</p>
               <div class="experience-box">
                 <div class="experience-border"></div>
                 <div class="experience-content">
