--- a/fpoles.html
+++ b/fpoles.html
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="experience-border"></div>
                 <div class="experience-content">
                   <div class="experience-number">M2</div>
-                  <div class="experience-info">Metragem<br>De 400 a 1.200 m2<br>Madeira Engenheirada</div>
+                  <div class="experience-info">Metragem<br>De 400 a 1.200 m2<br>Residências de Alto Padrão</div>
                 </div>
               </div>
             </div>
