--- a/fpoles.html
+++ b/fpoles.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Skan Hous Incorporadora">
-  <meta name="author" content="Paul">
+  <meta name="author" content="Skan Hous">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="favicon.png">
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="navbar boxed js-navbar">
       
       <!-- Brand -->
-      <a class="brand" href="#">
+      <a class="brand" href="https://skanhous.com.br/">
         <img alt="" src="images/brand.png">
         <div class="brand-info">
           <div class="brand-name">SKANHOUS</div>
