--- a/itu.html
+++ b/itu.html
@@ -105,6 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
       </div>
 
       <!-- Spacer -->
@@ -478,9 +479,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       </p>   
                       <div class="text-muted"><strong class="text-dark">Nos siga nas Redes Sociais</strong><br>
                         <div class="contact-social social-list">
-                          <a href="" class="icon ion-social-instagram"></a>
-                          <a href="" class="icon ion-social-linkedin"></a>
-                          <a href="" class="icon ion-social-link"></a>
+                        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+                        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+                        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+                        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
                         </div>
                       </div>
                     </div>
@@ -507,6 +509,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
           </div>
         </div>
         <div class="flex-item">
@@ -517,7 +520,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul> 
         </div>
         <div class="flex-item">
-          <div class="inline-block pull-sm-right">© SKANHOUS 2024. Todos os Direitos Reservados.</div>
+          <div class="inline-block pull-sm-right">© SKANHOUS 2025. Todos os Direitos Reservados.</div>
         </div>
       </div>
     </footer>
