--- a/itu.html
+++ b/itu.html
@@ -66,13 +66,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </nav>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
+        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+         <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
         </div>
-        <div class="copy">© Skan Hous 2024. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
+        <div class="copy">© Skan Hous 2025. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
       </div>
     </div>
 
@@ -80,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="navbar boxed js-navbar">
       
       <!-- Brand -->
-      <a class="brand" href="#">
+      <a class="brand" href="https://skanhous.com.br/">
         <img alt="" src="images/brand.png">
         <div class="brand-info">
           <div class="brand-name">SKANHOUS</div>
