--- a/v2.html
+++ b/v2.html
@@ -163,7 +163,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li data-transition="fade" data-slotamount="7" data-masterspeed="800" data-fsmasterspeed="800">
 
               <!-- Main image-->
-              <img src="images/projects/1-960x540.jpg" data-bgparallax="5"  alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+              <img src="images/projects/3.1-960x540.jpg" data-bgparallax="5"  alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
               <!-- Layer 1 -->
               <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
@@ -254,7 +254,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-splitin="chars" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 1.0<br> Modulos em Aço<br> Alessandra Pretti
+                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous V.2<br> Modulos em Aço<br> Alessandra Pretti
               </div>
 
               <!-- Layer 6 -->
@@ -304,87 +304,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
-              <img src="images/projects/2-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+              <img src="images/projects/3.2-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 3 -->
             <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
-              <img src="images/projects/3-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+              <img src="images/projects/3.3-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             <!-- Slide 4 -->
             <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
 
               <!-- Main image-->
-              <img src="images/projects/4-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 5 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/5-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 6 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/6-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 7 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/7-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 8 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/8-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 9 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/9-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 10 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/10-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 11 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/11-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 12 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/12-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 13 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/13-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 14 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/14-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            <!-- Slide 15 -->
-            <li data-transition="fade" data-slotamount="7" data-masterspeed="90" data-fsmasterspeed="90">
-
-              <!-- Main image-->
-              <img src="images/projects/15-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-            </li>
+              <img src="images/projects/3.4-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
           </ul>
         </div>
       </div>
