--- a/v2.html
+++ b/v2.html
@@ -81,13 +81,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </nav>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
+        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
         </div>
-        <div class="copy">© Skan Hous 2024. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
+        <div class="copy">© Skan Hous 2025. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
       </div>
     </div>
 
@@ -95,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header class="navbar boxed js-navbar">
       
       <!-- Brand -->
-      <a class="brand" href="#">
+      <a class="brand" href="https://skanhous.com.br/">
         <img alt="" src="images/brand.png">
         <div class="brand-info">
           <div class="brand-name">SKANHOUS</div>
@@ -432,115 +431,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </section>
 
-      <!-- Section Clients -->
-      <section id="clients" class="section-clients section bg-dots">
-        <div class="container">
-          <h2 class="section-title">Parceiros</h2>
-          <div class="client-carousel owl-carousel">
-            <div class="client-carousel-item">
-              <img alt="" class="client-img" src="images/clients/1-92x92.jpg">
-              <div class="client-box">
-                <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
-                <div class="client-title">
-                  <span class="client-name">Alessandra Pretti</span> 
-                  <span class="client-company">/ Studio Elevare</span>
-                </div>
-                <p class="client-description">Participar do desenvolvimento do projeto de casas modulares foi um marco na minha trajetória. Idealizamos um sistema construtivo adaptável a diferentes tipos de terrenos, promovendo integração com o meio ambiente e respeitando as características naturais de cada local. O foco em uma construção ecologicamente correta, com processos limpos e eficientes, garantiu um resultado que combina funcionalidade, beleza e sustentabilidade, atendendo às demandas de quem busca inovação e qualidade.</p>
-              </div>
-            </div>
-            <div class="client-carousel-item">
-              <img alt="" class="client-img" src="images/clients/2-92x92.jpg">
-              <div class="client-box">
-                <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
-                <div class="client-title">
-                  <span class="client-name">Andre Pinheiro </span> 
-                  <span class="client-company">/ Zanollin Engenharia</span>
-                </div>
-                <p class="client-description">Desenvolver o projeto de casas modulares foi um desafio que trouxe enorme satisfação para a equipe da ZANOLLIN. Adaptar a experiência acumulada ao longo dos anos na área industrial para um contexto mais sutil e integrado com todas as disciplinas foi uma jornada enriquecedora. O resultado final foi uma estrutura que harmoniza perfeitamente com a arquitetura: apesar da robustez típica de estruturas industriais, alcançamos linhas suaves e elegantes, criando uma integração arquitetônica marcante e funcional.</p>
-              </div>
-            </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-<div class="experience-box">
-  <div class="experience-border"></div>
-  <div class="experience-content">
-    <div class="experience-number">3</div>
-    <div class="experience-info">Valores<br>Visão<br>Missão</div>
-  </div>
-</div>
-
-<!-- Section Valores -->
-<section id="team" class="section section-about">
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="section-info">
-        <div class="title-hr wow fadeInLeft"></div>
-        <div class="info-title">Valores</div>
-      </div>
-    </div>
-    <div class="col-md-9">
-      <div class="row-services row">
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp">
-          <h4>Qualidade</h4>
-          <p>Nossas práticas e processos de projeto e construção são aprimorados para fornecer os resultados da mais alta qualidade para nossos clientes, uma casa durável, bem projetada e construída de maneira sistêmica.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-          <h4>Eternos Clientes</h4>
-          <p>Construímos mais do que casas, construímos confiança. Acreditamos que, quando entregamos as casas da mais alta qualidade, criamos um relacionamento para toda a vida.</p>
-        </div>
-        <div class="clearfix visible-sm visible-md"></div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.8s">
-          <h4>Regra de Ouro</h4>
-          <p>É um conceito simples mas poderoso: tratamos nossos clientes, fornecedores, parceiros e uns aos outros da maneira que queremos ser tratados - com empatia, respeito e integridade.</p>
-        </div>
-        <div class="clearfix visible-lg"></div> <!-- Clearfix adicionado para melhorar o alinhamento em telas maiores -->
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="1.2s">
-          <h4>Mãe Terra</h4>
-          <p>Sabemos que as construções têm um impacto profundo no meio ambiente e na saúde das pessoas. Como construtores de casas, sentimos a responsabilidade diária de construir e operar respeitando a mãe natureza da melhor maneira possível.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="1.6s">
-          <h4>Menos é Mais</h4>
-          <p>Uma casa construída em menos tempo, com uso de tecnologia e construção offsite, causa menor impacto ambiental além de aumentar a qualidade na entrega do imóvel.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="2.0s">
-          <h4>Segurança</h4>
-          <p>Somos intransigentes em nosso compromisso com a saúde e segurança dos nossos colaboradores, clientes e da comunidade em geral.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Section Missão e Visão -->
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="section-info">
-        <div class="title-hr wow fadeInLeft"></div>
-        <div class="info-title">Missão e Visão</div>
-      </div>
-    </div>
-    <div class="col-md-9">
-      <div class="row-services row">
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp">
-          <h4>Nossa Missão</h4>
-          <p>Transformar a experiência de morar e trabalhar dos brasileiros através da construção modular ágil, saudável e de alta qualidade em um processo altamente escalável, com alto impacto positivo nas áreas sociais e ambientais em todo Brasil.</p>
-        </div>
-        <div class="col-service col-sm-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-          <h4>Nossa Visão</h4>
-          <p>Desenvolver comunidades vibrantes integradas com a natureza, resultado de um balanço de sucesso entre integração sócio-econômica, sustentável e CO2 positiva.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
       <!-- Section Contacts -->
       <section id="contacts">
 
@@ -581,9 +471,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       </p>   
                       <div class="text-muted"><strong class="text-dark">Nos siga nas Redes Sociais</strong><br>
                         <div class="contact-social social-list">
-                          <a href="" class="icon ion-social-instagram"></a>
-                          <a href="" class="icon ion-social-linkedin"></a>
-                          <a href="" class="icon ion-social-link"></a>
+                        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+                        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+                        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+                        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
                         </div>
                       </div>
                     </div>
@@ -610,6 +501,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
           </div>
         </div>
         <div class="flex-item">
@@ -620,7 +512,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul> 
         </div>
         <div class="flex-item">
-          <div class="inline-block pull-sm-right">© SKANHOUS 2024. Todos os Direitos Reservados.</div>
+          <div class="inline-block pull-sm-right">© SKANHOUS 2025. Todos os Direitos Reservados.</div>
         </div>
       </div>
     </footer>
