--- a/v2.html
+++ b/v2.html
@@ -60,22 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <nav class="nav mobile-menu">
         <ul class="menu-list right-boxed">
           <li>
-            <a  href="#main">Home</a>
-          </li>
-          <li>
-            <a href="#about">Sobre</a>
-          </li>
-          <li>
-            <a href="#projects">Projetos</a>
-          </li>
-          <li>
-            <a href="#clients">Clientes</a>
-          </li>
-          <li>
-            <a href="#team">Missão</a>
-          </li>
-          <li>
-            <a href="#contacts">Contato</a>
+            <a  href="https://skanhous.com.br/">Home</a>
           </li>
         </ul>
       </nav>
@@ -128,22 +113,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <nav class="nav navigation visible-lg">
         <ul>
           <li>
-            <a  href="#main">Home</a>
-          </li>
-          <li>
-            <a href="#about">Sobre</a>
-          </li>
-          <li>
-            <a href="#projects">Projetos</a>
-          </li>
-          <li>
-            <a href="#clients">Clientes</a>
-          </li>
-          <li>
-            <a href="#team">Missão</a>
-          </li>
-          <li>
-            <a href="#contacts">Contato</a>
+            <a  href="https://skanhous.com.br/">Home</a>
           </li>
         </ul>
       </nav>
@@ -326,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
           <div class="row">
             <div class="col-lg-5">
-               <h2 class="section-title">Projetos</h2>
+               <h2 class="section-title">Outros Projetos</h2>
             </div>        
           </div>
         </div>
