--- a/v2.html
+++ b/v2.html
@@ -291,6 +291,36 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </main>
 
+        <div class="content">   
+
+      <!-- Section About -->
+      <section id="about" class="section section-about">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <strong class="section-subtitle">SKAN HOUS V.2</strong>
+              <h2 class="section-title section-about-title">A Nova Skan Hous V.2</h2>
+              <p>A Solução que prioriza ainda mais a Tecnologia, Engenharia e Arquitetura Modular e Offsite. Resultado de uma parceria com renomadas empresas do mercado brasileiro, nasce a V.2.</p>
+
+              <div class="experience-box">
+                <div class="experience-border"></div>
+                <div class="experience-content">
+                  <div class="experience-number">6</div>
+                  <div class="experience-info">Meses<br>Tempo de Entrega<br>Skan Hous V.2</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5 col-md-offset-1">
+              <div class="dots-image">
+                <img alt="" class="about-img img-responsive" src="images/1.1-470x660.jpg">
+                <div class="dots"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
      <!-- Section Projects -->
       <section id="projects" class="section-projects section">
         <div class="container">
