--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </nav>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="#" class="icon ion-social-twitter"></a>
-          <a href="#" class="icon ion-social-facebook"></a>
-          <a href="#" class="icon ion-social-googleplus"></a>
-          <a href="#" class="icon ion-social-linkedin"></a>
-          <a href="#" class="icon ion-social-dribbble-outline"></a>
+        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
         </div>
         <div class="copy">© Skan Hous 2024. Todos os Direitos Reservados<br> Criado por Skan Hous</div>
       </div>
@@ -120,6 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
       </div>
 
       <!-- Spacer -->
@@ -861,9 +861,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       </p>   
                       <div class="text-muted"><strong class="text-dark">Nos siga nas Redes Sociais</strong><br>
                         <div class="contact-social social-list">
-                          <a href="" class="icon ion-social-instagram"></a>
-                          <a href="" class="icon ion-social-linkedin"></a>
-                          <a href="" class="icon ion-social-link"></a>
+                        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+                        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+                        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+                        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
                         </div>
                       </div>
                     </div>
@@ -890,6 +891,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
         <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
+        <a href="https://www.youtube.com/@skanhous" class="icon ion-social-youtube"></a>
           </div>
         </div>
         <div class="flex-item">
@@ -900,7 +902,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul> 
         </div>
         <div class="flex-item">
-          <div class="inline-block pull-sm-right">© SKANHOUS 2024. Todos os Direitos Reservados.</div>
+          <div class="inline-block pull-sm-right">© SKANHOUS 2025. Todos os Direitos Reservados.</div>
         </div>
       </div>
     </footer>
