--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
       <!-- Meta tags Open Graph -->
     <meta property="og:title" content="Skan Hous - Incorporadora Ágil" />
-    <meta property="og:description" content="Mais do que construir casas; criamos espaços unicos que unem sofisticação, natureza e propósito, tudo isso de forma sustentável e personalizada!" />
+    <meta property="og:description" content="Casas Modulares de Alto Padrão!" />
     <meta property="og:image" content="https://skanhous.com.br/logo.jpg" />
     <meta property="og:url" content="https://skanhous.com.br" />
     <meta property="og:type" content="website" />
