--- a/v2.html
+++ b/v2.html
@@ -13,7 +13,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Skan Hous Incorporadora">
-  <meta name="author" content="Paul">
+
+      <!-- Meta tags Open Graph -->
+    <meta property="og:title" content="Skan Hous - V.2" />
+    <meta property="og:description" content="Casa Modular em Steel Frame. " />
+    <meta property="og:image" content="https://skanhous.com.br/v2.jpg" />
+    <meta property="og:url" content="https://skanhous.com.br/v2" />
+    <meta property="og:type" content="website" />
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="favicon.png">
