--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="project-carousel owl-carousel">
 
           <!-- Project Carousel Item 1 -->
-          <a href="#project1" class="project-item item-shadow popup-with-zoom-anim building">
+          <a href="https://skanhous.com.br/itu" class="project-item item-shadow">
             <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
